--- a/Demo/index.html
+++ b/Demo/index.html
@@ -4,11 +4,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>ExtJs权限管理平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="/ext/icon.css" rel="stylesheet" />
-    <link href="/css/desktop.css" rel="stylesheet" />
-    <script src="/ext/ext-all-debug.js"></script>
-    <script src="/ext/locale/locale-zh_CN.js"></script>
-    <script src="/app/App.js"></script>
+    <link href="ext/icon.css" rel="stylesheet" />
+    <link href="css/desktop.css" rel="stylesheet" />
+    <script src="ext/ext-all-debug.js"></script>
+    <script src="ext/locale/locale-zh_CN.js"></script>
+    <script src="app/App.js"></script>
 </head>
 <body>
 </body>
