--- a/Demo/index.html
+++ b/Demo/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="ext/icon.css" rel="stylesheet" />
     <link href="css/desktop.css" rel="stylesheet" />
-    <script src="ext/ext-all-debug.js"></script>
-    <script src="ext/locale/locale-zh_CN.js"></script>
+    <script src="//cdn.bootcss.com/extjs/6.0.0/ext-all.js"></script>
+    <script src="//cdn.bootcss.com/extjs/6.0.0/classic/locale/locale-zh_CN.js"></script>
     <script src="app/App.js"></script>
 </head>
 <body>
