--- a/ExtApp/ExtApp.Web/iframe.html
+++ b/ExtApp/ExtApp.Web/iframe.html
@@ -5,18 +5,28 @@
     <title>ExtJs权限管理平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="packages/extjs/icon.css" rel="stylesheet" />
-    <link href="css/desktop.css" rel="stylesheet" />
     <script src="packages/extjs/ext-all-debug.js"></script>
     <script src="packages/extjs/locale/locale-zh_CN.js"></script>
     <script src="app/App.js"></script>
     <script>
-        Ext.application({
-            name: 'ExtApp',
-            appFolder: 'app',
-            autoCreateViewport: 'App.view.Viewport'
+        Ext.onReady(function () {
+            var cls = App.getQueryString('cls');
+            var p = Ext.create(cls, {
+                header: false,
+                border: false
+            });
+            Ext.create('Ext.container.Viewport', {
+                layout: 'fit',
+                listeners: {
+                    beforerender: function (sender) {
+                        sender.add(p);
+                    }
+                }
+            });
         });
     </script>
 </head>
 <body>
+    <!-- 该页面用于iframe方式打开ExtJs类，请勿删除！！！ -->
 </body>
 </html>
