--- a/ExtApp/ExtApp.Web/iframe.html
+++ b/ExtApp/ExtApp.Web/iframe.html
@@ -5,6 +5,7 @@
     <title>ExtJs权限管理平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="packages/extjs/icon.css" rel="stylesheet" />
+    <link href="css/common.css" rel="stylesheet" />
     <script src="packages/extjs/ext-all-debug.js"></script>
     <script src="packages/extjs/locale/locale-zh_CN.js"></script>
     <script src="app/App.js"></script>
