--- a/ExtApp/ExtApp.Web/iframe.html
+++ b/ExtApp/ExtApp.Web/iframe.html
@@ -8,6 +8,7 @@
     <link href="css/common.css" rel="stylesheet" />
     <script src="packages/extjs/ext-all-debug.js"></script>
     <script src="packages/extjs/locale/locale-zh_CN.js"></script>
+    <script src="packages/RequireJs/require.min.js"></script>
     <script src="app/App.js"></script>
     <script>
         Ext.onReady(function () {
