--- a/ExtApp/ExtApp.Web/index.html
+++ b/ExtApp/ExtApp.Web/index.html
@@ -10,6 +10,7 @@
     <script src="packages/extjs/ext-all-debug.js"></script>
     <script src="packages/extjs/locale/locale-zh_CN.js"></script>
     <script src="packages/RequireJs/require.min.js"></script>
+    <script src="packages/jquery/jquery.min.js"></script>
     <script src="app/App.js"></script>
     <script>
         Ext.application({
