--- a/ExtApp/ExtApp.Web/desktop.html
+++ b/ExtApp/ExtApp.Web/desktop.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>测试前台路径调整</title>
+    <title>ExtJs权限管理平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="packages/extjs/themes/theme-classic/theme-classic-all.css" rel="stylesheet" />
     <link href="packages/extjs/icon.css" rel="stylesheet" />
@@ -14,11 +14,12 @@
     <script src="packages/jquery/jquery.min.js"></script>
     <script src="app/App.js"></script>
     <script>
+        Ext.require('App.app.desktop.Index');
         Ext.onReady(function () {
             var cls = App.getQueryString('cls');
-            if (cls == null) { // 打开首页
-                Ext.create('App.app.Viewport');
-            } else { // 打开cls对应的页面
+            if (cls == null) {
+                new App.app.desktop.Index();
+            } else {
                 var p = Ext.create(cls, {
                     header: false,
                     border: false
