--- a/ExtApp/ExtApp.Web/index.html
+++ b/ExtApp/ExtApp.Web/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>ExtJs权限管理平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href="packages/extjs/themes/theme-classic/theme-classic-all.css" rel="stylesheet" />
     <link href="packages/extjs/icon.css" rel="stylesheet" />
     <link href="css/common.css" rel="stylesheet" />
     <link href="css/desktop.css" rel="stylesheet" />
