--- a/ExtApp/ExtApp.Web/desktop.html
+++ b/ExtApp/ExtApp.Web/desktop.html
@@ -17,12 +17,14 @@
         Ext.require('App.app.desktop.Index');
         Ext.onReady(function () {
             var cls = App.getQueryString('cls');
+            var query = App.getAllQueryString();
             if (cls == null) {
                 new App.app.desktop.Index();
             } else {
                 var p = Ext.create(cls, {
                     header: false,
-                    border: false
+                    border: false,
+                    query: query
                 });
                 Ext.create('Ext.container.Viewport', {
                     layout: 'fit',
