--- a/ExtApp/ExtApp.Web/index.html
+++ b/ExtApp/ExtApp.Web/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>>ExtJs权限管理平台</title>
+    <title>ExtJs权限管理平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="packages/extjs/themes/theme-classic/theme-classic-all.css" rel="stylesheet" />
     <link href="packages/extjs/icon.css" rel="stylesheet" />
