删除示例工作流

--- a/ExtApp/ExtApp.Web/packages/workflow/designer.html
+++ b/ExtApp/ExtApp.Web/packages/workflow/designer.html
@@ -33,7 +33,7 @@
         mxConstants.DEFAULT_HOTSPOT = 1;
 
         // Enables guides
-        mxGraphHandler.prototype.guidesEnabled = true;
+        mxGraphHandler.prototype.guidesEnabled = false;
 
         // Alt disables guides
         mxGuide.prototype.isEnabledForEvent = function (evt) {
@@ -51,8 +51,6 @@
         var start = function () {
             // 创建画布并加载工作流
             var editor = createEditor('config/workfloweditor.xml');
-            //var node = mxUtils.load('/api/Workflow/GetXml?ID=' + (ID == null ? 0 : ID)).getDocumentElement();
-            //editor.configure(node);
             var url = '/api/Workflow/GetXml?ID=' + (ID == null ? 0 : ID);
             editor.open(url);
         }
